# ewcalc

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  codeql.yml
assets/linux/: ewcalc.desktop
cmake/: platform_windows.cmake
ewpresenter/: CMakeLists.txt
ewpresenter/harness/: CMakeLists.txt  main.cpp
ewpresenter/include/ewpresenter/: antenna_presenter.h  digital_presenter.h  ewpresenter.h  formatter.h  jamming_presenter.h  link_presenter.h  location_presenter.h  presenter_base.h  propagation_presenter.h  radar_presenter.h  receiver_presenter.h  validation.h
ewpresenter/src/: antenna_presenter.cpp  digital_presenter.cpp  formatter.cpp  jamming_presenter.cpp  link_presenter.cpp  location_presenter.cpp  propagation_presenter.cpp  radar_presenter.cpp  receiver_presenter.cpp
ewpresenter/tests/: CMakeLists.txt  test_bridge.cpp  test_formatter.cpp  test_presenters.cpp
frontend/linux/: CMakeLists.txt  README.md
frontend/linux/src/: MainWindow.cpp  MainWindow.h  PageUtils.h  main.cpp
frontend/linux/src/pages/: AntennaPage.cpp  AntennaPage.h  DigitalPage.cpp  DigitalPage.h  JammingPage.cpp  JammingPage.h  LinkPage.cpp  LinkPage.h  LocationPage.cpp  LocationPage.h  PropagationPage.cpp  PropagationPage.h  RadarPage.cpp  RadarPage.h  ReceiverPage.cpp  ReceiverPage.h  ReferencePage.cpp  ReferencePage.h
frontend/macos/: CMakeLists.txt  README.md
frontend/macos/app/: BridgingHeader.h  ContentView.swift  Info.plist  ewcalcApp.swift
frontend/macos/app/Adapters/: AntennaAdapter.swift  DigitalAdapter.swift  EwCalcStore.swift  JammingAdapter.swift  LinkAdapter.swift  LocationAdapter.swift  PropagationAdapter.swift  RadarAdapter.swift  ReceiverAdapter.swift
frontend/macos/app/Assets/: AppIcon.icns
frontend/macos/app/Views/: AntennaView.swift  DigitalView.swift  JammingView.swift  LinkView.swift  LocationView.swift  PropagationView.swift  RadarView.swift  ReceiverView.swift  ReferenceView.swift  Shared.swift
frontend/macos/bridge/: CMakeLists.txt  ewcalc_bridge.cpp  ewcalc_bridge.h
frontend/windows/: .gitignore  CMakeLists.txt  Package.appxmanifest  app.manifest  main.cpp  main_window.cpp  main_window.h  ui_helpers.h
frontend/windows/ewcalc-winui/: README.md  ewcalc-winui.sln
frontend/windows/ewcalc-winui/ewcalc-winui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest  ewcalc-winui.csproj
frontend/windows/ewcalc-winui/ewcalc-winui/Helpers/: FieldErrorConverter.cs  PageHelper.cs
frontend/windows/ewcalc-winui/ewcalc-winui/ViewModels/: AntennaViewModel.cs  DigitalViewModel.cs  JammingLocationRadarViewModels.cs  LinkViewModel.cs  PropagationViewModel.cs  ReceiverViewModel.cs
frontend/windows/ewcalc-winui/ewcalc-winui/Views/: AntennaPage.xaml  DigitalPage.xaml  HomePage.xaml  JammingPage.xaml  LinkPage.xaml  LocationPage.xaml  PageCodeBehinds.cs  PropagationPage.xaml  PropagationPage.xaml.cs  RadarPage.xaml  ReceiverPage.xaml  ReferencePage.xaml  ResultRow.xaml  ResultRow.xaml.cs
frontend/windows/ewcalc-winui/ewpresenter.net/: AntennaAdapter.cpp  AntennaAdapter.h  CallbackBridge.h  DigitalAdapter.cpp  DigitalAdapter.h  JammingAdapter.cpp  JammingAdapter.h  LinkAdapter.cpp  LinkAdapter.h  LocationAdapter.cpp  LocationAdapter.h  MarshalHelper.h  NativeCallbacks.h  PropagationAdapter.cpp  PropagationAdapter.h  RadarAdapter.cpp  RadarAdapter.h  ReceiverAdapter.cpp  ReceiverAdapter.h  ewpresenter.net.vcxproj
frontend/windows/panels/: jamming_panel.cpp  jamming_panel.h  link_panel.cpp  link_panel.h  location_panel.cpp  location_panel.h  propagation_panel.cpp  propagation_panel.h  radar_panel.cpp  radar_panel.h  receiver_panel.cpp  receiver_panel.h
libew/: CMakeLists.txt
libew/include/libew/: libew.h
libew/include/libew/antenna/: antenna.h
libew/include/libew/core/: constants.h  units.h
libew/include/libew/digital/: digital.h
libew/include/libew/jamming/: jamming.h
libew/include/libew/link/: link.h
libew/include/libew/location/: location.h
libew/include/libew/propagation/: propagation.h
libew/include/libew/radar/: radar.h
libew/include/libew/receiver/: receiver.h
libew/src/: antenna.cpp  digital.cpp  jamming.cpp  link.cpp  location.cpp  propagation.cpp  radar.cpp  receiver.cpp
libew/tests/: CMakeLists.txt  test_antenna.cpp  test_digital.cpp  test_jamming.cpp  test_link.cpp  test_location.cpp  test_main.h  test_propagation.cpp  test_radar.cpp  test_receiver.cpp  test_units.cpp
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
